--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="bodybg">
     <header>
-        <h1>Background Generator</h1>
+        <h1>Cool Generator</h1>
         <input type="color" class="color1" name="color1" value="#00ff00">
         <input type="color" class="color2" name="color2" value="#ff0000">
         <h2>Current CSS Background</h2>
